<resources>
    <string name="app_name">Muelbles_Ramon</string>
    <string name="bienvenida">Bienvenido a</string>
    <string name="nombreEmpresa">Muebles Ramon</string>
    <string name="iniciosesion"><u>Inicio de sesión</u></string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="iniciar_bot">Inciar sesión</string>
    <string name="inicio"><u>Inicio</u></string>
    <string name="mesas">Mesas</string>
    <string name="sillas">Sillas</string>
    <string name="carrito">Carrito</string>
    <string name="cuenta">Cuenta</string>
    <string name="nombre">Nombre:</string>
    <string name="email">Email:</string>
    <string name="direccion">Dirección:</string>
    <string name="telefono">Teléfono:</string>
    <string name="guardar">Guardar</string>
</resources>