<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/pantallabienvenida"
    tools:context=".Bienvenida">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="318dp"
        android:layout_height="343dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.794"
        app:srcCompat="@mipmap/cuadrado" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="45dp"
        android:layout_height="46dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="72dp"
        android:backgroundTint="#00FFFFFF"
        android:onClick="ocultar"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/contra_pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toEndOf="@+id/cntr_et"
        app:layout_constraintTop_toTopOf="@+id/contra_pt"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/ojo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/nombreEmpresa"
        android:textColor="#FFFFFF"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="112dp"
        android:fontFamily="@font/hind_medium"
        android:text="@string/bienvenida"
        android:textColor="#FFFFFF"
        android:textColorLink="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/usuario_pt"
        android:layout_width="257dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/contra_pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/iniciar_sesion_bot"
        android:layout_width="272dp"
        android:layout_height="62dp"
        android:backgroundTint="#1C5D99"
        android:onClick="iniciarSesion"
        android:text="@string/iniciar_bot"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contra_pt"
        app:layout_constraintVertical_bias="0.257" />

    <TextView
        android:id="@+id/iniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/iniciosesion"
        android:textColor="#1F405E"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/usuario_pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/contra_pt"
        android:layout_width="209dp"
        android:layout_height="52dp"
        android:layout_marginBottom="204dp"
        android:ems="10"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.396"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="303dp"
        android:layout_height="188dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@mipmap/cuadrado_negro" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="270dp"
        android:layout_height="126dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5"
        app:srcCompat="@mipmap/logo" />


</androidx.constraintlayout.widget.ConstraintLayout>